--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Rubik:300,400,500,700|Roboto+Mono:300,400,500,700');
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.min.css');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons-wind.css');
 
 body {
   margin: 0;
@@ -103,6 +106,45 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 32px;
 }
 
+.current-weather-day {
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+.current-weather-icon {
+  font-size: 120px;
+  display: flex;
+  flex-flow: column nowrap;
+  text-align: center;
+}
+
+.current-weather-temp {
+  font-size: 80px;
+}
+
+.current-weather-desc {
+  font-size: 30px;
+}
+
+.current-weather-topline {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.current-weather-bottomline {
+  font-size: 20px;
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+.current-weather-bottom-element {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+}
+
 .climate-box {
   font-size: 14px;
   display: flex;
@@ -134,6 +176,38 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: space-between;
   display: flex;
 }
+
+.light-list {
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+.light-box {
+  display: flex;
+  flex-flow: row nowrap;
+  border-bottom: 1px solid white;
+  padding: 5px;
+  margin: 5px;
+  justify-content: space-between;
+}
+
+.message-single {
+  font-size: 20px;
+  padding: 15px 0;
+  border-bottom: 1px solid white;
+}
+
+.message-single:last-child {
+  border-bottom: none;
+}
+
+.maslow-icon {
+  text-align: center;
+}
+
+.maslow-icon i {
+  font-size: 80px;
+};
 
 @media (max-width: 720px) {
 
