--- a/src/index.css
+++ b/src/index.css
@@ -223,6 +223,16 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 20px;
 }
 
+.score-holder {
+  flex-flow: row wrap;
+  display: flex;
+}
+
+.score {
+  width: 10%;
+  margin-left: 2%;
+}
+
 @media (max-width: 720px) {
 
   .panel-width-2 {
